Not Updating Scene Length #30491

Closed
opened 2012-03-08 20:03:53 +01:00 by Denis · 8 comments

%%%Create some scenes (link from default)
Create new empty scene
Go to Sequencer
Add Scene Strips
Now go to all other scenes and change end frame
Go to empty scene and sequencer
You should see that scene strips not updated

Blender 2.62 / Windows XP%%%

%%%Create some scenes (link from default) Create new empty scene Go to Sequencer Add Scene Strips Now go to all other scenes and change end frame Go to empty scene and sequencer You should see that scene strips not updated Blender 2.62 / Windows XP%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%It's not intended to update these automatically. There's cases where this is indeed useful but also others where it can mess up a the setup in the sequencer, overlapping with other strips etc. Not considered a bug, closing.%%%

%%%It's not intended to update these automatically. There's cases where this is indeed useful but also others where it can mess up a the setup in the sequencer, overlapping with other strips etc. Not considered a bug, closing.%%%
Author

%%%My problem is that i can not fix this - and i must delete strips and add new strips...
both: frames are not updated - and the animation itself is not updated.

I can not make strips longer dragging it...

This is definitly a bug%%%

%%%My problem is that i can not fix this - and i must delete strips and add new strips... both: frames are not updated - and the animation itself is not updated. I can not make strips longer dragging it... This is definitly a bug%%%

%%%I can make scene strips shorter/longer by right clicking on the arrows at the end and dragging, or by modifying the start/length values in the Edit Strip panel in the N key properties. If there's still a bug, please give a more exact steps explaining what does not work? I'm not sure what "frames or animated not updated" means.%%%

%%%I can make scene strips shorter/longer by right clicking on the arrows at the end and dragging, or by modifying the start/length values in the Edit Strip panel in the N key properties. If there's still a bug, please give a more exact steps explaining what does not work? I'm not sure what "frames or animated not updated" means.%%%
Author

%%%i could not attach files here (error: missing parameter)
I posted files on pasteall

Blend-File:
http://www.pasteall.org/blend/12429

Image:
http://www.pasteall.org/pic/28137

How it happen (updated):

Create animation with endframe 25
Create some scenes (link from default) each with endframe 25
Create new empty scene with endframe 250
Go to Sequencer
Add Scene Strips (25 frames long)
Add Cross-Effect Strip
Now go to all other scenes and change end frame to 50
Go to empty scene and sequencer
You should see that scene strips not updated

I am able to make strips longer than 25 - but the animation itself stop at 25 (old endframe)
new endframes not accepted - not updated manual or automatic

%%%

%%%i could not attach files here (error: missing parameter) I posted files on pasteall Blend-File: http://www.pasteall.org/blend/12429 Image: http://www.pasteall.org/pic/28137 How it happen (updated): Create animation with endframe 25 Create some scenes (link from default) each with endframe 25 Create new empty scene with endframe 250 Go to Sequencer Add Scene Strips (25 frames long) Add Cross-Effect Strip Now go to all other scenes and change end frame to 50 Go to empty scene and sequencer You should see that scene strips not updated I am able to make strips longer than 25 - but the animation itself stop at 25 (old endframe) new endframes not accepted - not updated manual or automatic %%%

%%%Will check this report.%%%

%%%Will check this report.%%%

%%%Fixed in svn rev45083. Thanks for the report, closing.%%%

%%%Fixed in svn rev45083. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30491
No description provided.