release/scripts/startup/bl_ui/space_sequencer.py
@@ -242,6 +242,7 @@ class SEQUENCER_MT_strip(Menu):
         layout.operator("sequencer.offset_clear")
         layout.operator("sequencer.deinterlace_selected_movies")
         layout.operator("sequencer.rebuild_proxy")
+        layout.operator("sequencer.update_strip_length")
         layout.separator()
 
         layout.operator("sequencer.duplicate")
